Bug 1039165: Replace spammy NS_ENSURE_TRUE in nsDocShell::CheckLoadingPermissions with simple early-return. r=bholley